fix: last h2 before footer is kinda more visible

--- a/style.css
+++ b/style.css
@@ -667,7 +667,9 @@ footer h3 {
     color: white !important;
 }
 
-
+.text-shadow {
+    text-shadow: black 0 0 5px;
+}
 
 .container {
     max-width: 1000px;
@@ -741,10 +743,6 @@ h3 {
     max-width: 800px;
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px black;
-}
-
-h1 {
-    color: black!important;
 }
 
 .icons {
